--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity"
-    android:background="@drawable/bgmain">
+    >
 
 
     <com.google.android.material.button.MaterialButton
@@ -52,8 +52,8 @@
         android:layout_centerHorizontal="true"
         android:layout_marginStart="20dp"
         android:layout_marginEnd="39dp"
-        android:backgroundTint="@color/gstbtncolor"
-        android:textColor="@color/black"
+        android:backgroundTint="@color/anshgstcolor"
+        android:textColor="@color/white"
         android:padding="10dp"
         android:text=" GST"
         android:textAllCaps="false"
@@ -125,12 +125,13 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:layout_marginBottom="63dp"
-        android:text="Calculate"
-        android:textSize="26dp"
-        android:textColor="@color/white"
+        android:text="What you need to Calculate ?"
+        android:textColor="@color/black"
+        android:textSize="16dp"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/currencybtn"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
