--- a/app/src/main/res/layout/activity_sipactivity.xml
+++ b/app/src/main/res/layout/activity_sipactivity.xml
@@ -11,15 +11,15 @@
         android:layout_width="0dp"
         android:layout_height="63dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="43dp"
+        android:layout_marginTop="24dp"
         android:layout_marginEnd="16dp"
-        android:layout_marginBottom="38dp"
+        android:layout_marginBottom="22dp"
         android:max="100"
         android:min="1"
-        app:layout_constraintBottom_toTopOf="@+id/resultsip"
+        app:layout_constraintBottom_toTopOf="@+id/buttonsip"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/returnexpected" />
+        app:layout_constraintTop_toTopOf="@+id/seekbarreturntext" />
 
     <SeekBar
         android:id="@+id/seekbar_Default"
@@ -60,12 +60,12 @@
         android:layout_marginStart="67dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="67dp"
-        android:layout_marginBottom="28dp"
+        android:layout_marginBottom="29dp"
+        android:src="@drawable/sipimagemodule"
         app:layout_constraintBottom_toTopOf="@+id/amountpermonth"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:src="@drawable/sipimagemodule" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/amountpermonth"
@@ -73,7 +73,7 @@
         android:layout_height="39dp"
         android:layout_marginStart="21dp"
         android:layout_marginEnd="22dp"
-        android:layout_marginBottom="7dp"
+        android:layout_marginBottom="5dp"
         android:text="Amount Per Month ?"
         android:textColor="@color/black"
         android:textStyle="bold"
@@ -98,19 +98,20 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginBottom="210dp"
+        android:layout_marginBottom="24dp"
         android:text="Return Expected Per year ?"
         android:textColor="@color/black"
         android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/seekbar_return"
         app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/resultsip"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="66dp"
-        android:text="Result of the calculation"
+        android:layout_marginEnd="32dp"
+        android:layout_marginBottom="26dp"
+        android:text="Result "
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
@@ -140,10 +141,21 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="17dp"
-        android:layout_marginBottom="5dp"
+        android:layout_marginBottom="191dp"
         android:text=""
-        app:layout_constraintBottom_toTopOf="@+id/seekbar_return"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/seekbar_return" />
+
+    <Button
+        android:id="@+id/buttonsip"
+        android:layout_width="134dp"
+        android:layout_height="46dp"
+        android:layout_marginBottom="10dp"
+        android:backgroundTint="@color/sipbtncolor"
+        android:text="Calculate"
+        app:layout_constraintBottom_toTopOf="@+id/resultsip"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
